--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -4,5 +4,11 @@
 	&-Breadcrumbs {
 		padding: 16px 0;
 		color: #999999;
+		font-size: 14px;
+	}
+
+	&-Details {
+		border-radius: 4px;
+		background-color: white;
 	}
 }
