--- a/src/components/Items.scss
+++ b/src/components/Items.scss
@@ -2,6 +2,10 @@
 	background-color: white;
 	border-radius: 4px;
 
+	a {
+		text-decoration: none;
+	}
+
 	&-Line {
 		border-top: 1px solid;
 		margin: 0px 30px;
